<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Puzzlide</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="signin_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="signin_failure">Unable to sign in.</string>
    <string name="game_mode_title">Game Mode</string>
    <string name="game_mode_traditional">Traditional</string>
    <string name="game_mode_speed">Speed</string>
    <string name="game_mode_multiplayer">Multiplayer</string>
    <string name="game_background_title">Piece Background</string>
    <string name="game_background_plain">Plain</string>
    <string name="game_background_fixed_image">Fixed Image</string>
    <string name="game_background_video">Video</string>
    <string name="game_numbers_title">Numbers?</string>
    <string name="game_size_title">Game Size</string>
    <string name="game_size_3x3">3x3</string>
    <string name="game_size_4x4">4x4</string>
    <string name="game_size_5x5">5x5</string>
    <string name="game_size_6x6">6x6</string>
    <string name="game_size_custom">\?x\?</string>
    <string name="sign_out">Sign Out</string>
    <string name="congratulation_text">Congratulations, you win!!</string>
    <string name="title_activity_multiplayer">MultiplayerActivity</string>
    <string name="multiplayer_start_match">Start Match</string>
    <string name="multiplayer_quick_match">Quick Match</string>
    <string name="multiplayer_check_games">Check Games</string>
    <string name="preference_key_file">com.pocotopocopo.puzzlide.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_bitmap_cropper">Crop Image</string>

    <string name="start_game">Start Game</string>
    <string name="moves_text">Moves: %1$d</string>
    <string name="time_text_win">Your final time is: %1$s</string>
    <string name="crop_text">Select</string>
    <string name="cancel_text">Cancel</string>
    <string name="new_image_text">New Image</string>
    <string name="game_start_in">Get Ready!!</string>
    <string name="resume_button_text">Resume</string>
    <string name="exit_button_text">Exit</string>
    <string name="paused_text">Paused Game</string>
    <string name="retry_button_text">Retry</string>
    <string name="restart_button_text">Restart Game</string>

    <string name="time_picker_title">Select Time</string>
    <string name="ok_button_text">Ok</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="no">no</string>
    <string name="not_showing_numbers">No</string>
    <string name="open_image">Open Image</string>
    <string name="rotate">Rotate</string>
    <string name="rotateccw">Rotate CCW</string>
    <string name="rotatecw">Rotate CW</string>
    <string name="yes_showing_numbers">Yes</string>
    <string name="quick_game">Quick Game</string>
    <string name="save_time">Save Time</string>
    <string name="game_over_title">Time is up!!!</string>
    <string name="game_over_text">YOU LOOSE MOTHERFUCKER!!!!</string>
    <string name="resultTitle">Results</string>
    <string name="result_movements">Movements</string>
    <string name="result_time">Time</string>
    <string name="result_title">Game Results</string>


    <item name="time_error_text" type="id">You have to set a time greater than 0:00</item>
    <item name="movements" type="id">Movements</item>
</resources>
